# Vectoria

./: .gitignore  LICENSE  README.md  README_NEW.md  pyproject.toml  setup.cfg
ansible/: README.md  deploy.yml  requirements.txt
ansible/inventory/: hosts
data/annotated/: Untitled-1.json  v1_legacy.json
etc/default/: cineca_config.yaml  default_config.yaml
etc/default/cli/: ask_question.json  build_index.json  evaluate.json  inference.json
eurocc/notebooks/evaluation/: Chiara_test_eval.ipynb  test_deepeval.py  test_trulens.ipynb
eurocc_prod/: pyproject.toml
eurocc_prod/etc/default/: ask_question.json  build_index.json  cl.json  db_creation.json  default_config.yaml  evaluate.json  qa_prompt.txt  qa_task.json
eurocc_prod/etc/default/prompts/: qa.txt
eurocc_prod/etc/default/prompts/it/: contextualize_q.txt
eurocc_prod/etc/vectoria_config/: default_config.yaml
eurocc_prod/test/common/: test_config.py
eurocc_prod/test/data/config/: test_config.yaml
eurocc_prod/test/data/docx/: 1.docx  2.docx
eurocc_prod/test/data/raw/: empty_lines.txt
eurocc_prod/test/db_management/preprocessing/: test_cleaning.py  test_extraction_docx.py  test_extraction_pdf.py  test_pipeline.py  test_pipeline_builder.py
eurocc_prod/test/db_management/retriever/: test_faiss_retriever.py
eurocc_prod/test/db_management/vector_store/: test_faiss_vector_store.py
eurocc_prod/test/llm/: test_agent_builder.py  test_qa_agent.py
eurocc_prod/test/tasks/: test_build_index.py  test_db_creation.py
eurocc_prod/vectoria_lib/common/: __init__.py  config.py  logger.py  paths.py  utils.py
eurocc_prod/vectoria_lib/db_management/: __init__.py
eurocc_prod/vectoria_lib/db_management/preprocessing/: chunking.py  cleaning.py  document_data.py  extraction_base.py  extraction_docx.py  extraction_pdf.py  regex.py
eurocc_prod/vectoria_lib/db_management/preprocessing/pipeline/: preprocessing_pipeline.py  preprocessing_pipeline_builder.py  preprocessing_pipeline_executor.py
eurocc_prod/vectoria_lib/db_management/retriever/: faiss_retriever.py  retriever.py
eurocc_prod/vectoria_lib/db_management/vector_store/: faiss_vector_store.py
eurocc_prod/vectoria_lib/io/: __init__.py  commandline.py  folder_reader.py
eurocc_prod/vectoria_lib/llm/: __init__.py  agent_builder.py  helpers.py  parser.py
eurocc_prod/vectoria_lib/llm/agents/: qa.py  qa_with_history.py
eurocc_prod/vectoria_lib/llm/inference_engine/: huggingface_inference_engine.py  inference_engine_builder.py
eurocc_prod/vectoria_lib/llm/prompts/: prompt_builder.py
eurocc_prod/vectoria_lib/tasks/: __init__.py  ask_question.py  build_index.py  db_creation.py  qa_task.py
eurocc_v1/: __init__.py  paths.py
eurocc_v1/lib/: ecclogger.py
eurocc_v1/lib/agents/: qa_agent.py
eurocc_v1/lib/api/: v1.py
eurocc_v1/lib/index/: faiss_vector_store.py
eurocc_v1/lib/preprocessing/: chunking.py  cleaning.py  pdf_extraction.py  regex.py
eurocc_v1/lib/rag/: faiss_retriever.py  retriever.py
eurocc_v1/test/index/: test_faiss_vector_store.py
notebooks/: .jupyter_ystore.db
notebooks/evaluation/: test_eval.ipynb  test_eval.py  test_ragas.ipynb
notebooks/ingestion/: test_ingestion_colab.ipynb  test_ingestion_leo.ipynb
notebooks/preprocessing/text_cleaning/: cleaning.ipynb  llm_toc_extraction.ipynb
notebooks/rag/: Untitled.ipynb  rag_baseline.ipynb  rag_baseline_langchain_high_level.ipynb  selex_es_test.txt
test/: conftest.py
test/applications/: test_llm_factory.py  test_qa.py
test/common/: test_config.py  test_config_cineca.py  test_config_davinci.py
test/evaluation/: test_ragas.py
test/llm/: test_agent_builder.py  test_application_builder.py  test_engine.py  test_inference_engine_builder.py  test_qa_agent.py  test_qa_agent_cineca.py  test_qa_agent_davinci.py  test_qa_application.py
test/tasks/: test_build_index.py  test_inference.py
test_pipeline_executor_logs/chunks/: docx_extraction_test.docx_1.1.1.1.1_chunks.txt  docx_extraction_test.docx_1.1.1.1_chunks.txt  docx_extraction_test.docx_1.1.1_chunks.txt  docx_extraction_test.docx_1.1_chunks.txt  docx_extraction_test.docx_1_chunks.txt  docx_extraction_test.docx_2.1_chunks.txt  docx_extraction_test.docx_2_chunks.txt  test_docx.docx_1_chunks.txt  test_docx.docx_2_chunks.txt  test_docx.docx_3_chunks.txt  test_docx.docx_4.1.1_chunks.txt  test_docx.docx_4.1.2_chunks.txt  test_docx.docx_4.2.1_chunks.txt  test_docx.docx_4.2.2_chunks.txt  test_docx.docx_4.2.3_chunks.txt  test_docx.docx_4.2_chunks.txt  test_docx.docx_4.3_chunks.txt  test_docx.docx_4.4_chunks.txt  test_docx.docx_4.5_chunks.txt  test_docx.docx_4_chunks.txt  test_docx.docx_5_chunks.txt  test_docx.docx_6.1_chunks.txt  test_docx.docx_6.2_chunks.txt  test_docx.docx_6.3_chunks.txt  test_docx.docx_6.4.1_chunks.txt  test_docx.docx_6.4.2_chunks.txt  test_docx.docx_6.4_chunks.txt  test_docx.docx_6_chunks.txt  test_docx.docx_7.1_chunks.txt  test_docx.docx_7.2_chunks.txt  test_docx.docx_7.3_chunks.txt  test_docx.docx_8_chunks.txt
test_pipeline_executor_logs/docs_structure/: docx_extraction_test_structure.txt  test_docx_structure.txt
vectoria_lib/: __init__.py
vectoria_lib/applications/: application_builder.py  chain_runner.py  chains.py  prompt_builder.py  qa.py
vectoria_lib/chains/: context_enhancement.py  create_context.py  generation.py  reranking.py  retrieval.py
vectoria_lib/common/: __init__.py  archive.py  config.py  constants.py  logger.py  plots.py  utils.py
vectoria_lib/eval/: agent_evaluator.py
vectoria_lib/evaluation/: agent_evaluator.py  qa_application_evaluator.py
vectoria_lib/gui/: gui_v1.py
vectoria_lib/ingestion/: chunking.py  extraction_docx.py  extraction_pdf.py  preprocessing_pipeline.py  utils.py
vectoria_lib/llm/: __init__.py  agent_builder.py  agent_evaluator.py  application_builder.py  helpers.py  huggingface.py  llm_builder.py  llm_factory.py  openai.py  parser.py
vectoria_lib/preprocessing/: extraction_docx.py  extraction_pdf.py  preprocessing_pipeline.py
vectoria_lib/rag/: __init__.py
vectoria_lib/tasks/: __init__.py  ask_question.py  build_index.py  evaluate.py  inference.py
(+147 files in other folders)
