[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectoria_lib"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8"
]
authors = [
    {name = "Andrea Proia", email = "a.proia@cineca.it"},
    {name = "Chiara Malizia", email = "c.malizia@cineca.it"},
    {name = "Eric Pascolo", email = "e.pascolo@cineca.it"},
    {name = "Leonardo Baroncelli", email = "leonardo.baroncelli26@gmail.com"}
]
maintainers = [
    {name = "Andrea Proia", email = "a.proia@cineca.it"},
    {name = "Chiara Malizia", email = "c.malizia@cineca.it"},
    {name = "Eric Pascolo", email = "e.pascolo@cineca.it"},
    {name = "Leonardo Baroncelli", email = "leonardo.baroncelli26@gmail.com"}
]
dependencies = [
    "torch",
    "datasets",
    "transformers",
    "faiss-gpu",
    "accelerate",
    "bitsandbytes",
    "pandas",
    "langchain",
    "langchain-huggingface",
    "langchain-community",
    "langchain-ollama",
    "langchain-openai",
    "langsmith",
    "langgraph",
    "pypdf",
    "python-docx",
    "tqdm"
]

[project.optional-dependencies]
evaluation = [
    "ragas==0.2.0b0",
    "nltk",
    "rouge_score"
]
dev = [
    "jupyterlab",
    "ipykernel",
    "grandalf"
]
test = [
    "pytest",
    "IPython",
]
ui = [
    "streamlit",
    "plotly",
    "GPUtil"
]
engines = [
    "vllm",
    "ollama"
]

[project.urls]
"Repository" = "https://gitlab.hpc.cineca.it/aproia00/vectoria"
"Issues" = "https://gitlab.hpc.cineca.it/aproia00/issues"

[tool.pytest.ini_options]
addopts = "-v --pdbcls=IPython.terminal.debugger:TerminalPdb"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
] 