[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectoria_lib"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8"
]
authors = [
    {name = "Andrea Proia", email = "a.proia@cineca.it"},
    {name = "Chiara Malizia", email = "c.malizia@cineca.it"},
    {name = "Eric Pascolo", email = "e.pascolo@cineca.it"},
    {name = "Leonardo Baroncelli", email = "leonardo.baroncelli26@gmail.com"}
]
maintainers = [
    {name = "Andrea Proia", email = "a.proia@cineca.it"},
    {name = "Chiara Malizia", email = "c.malizia@cineca.it"},
    {name = "Eric Pascolo", email = "e.pascolo@cineca.it"},
    {name = "Leonardo Baroncelli", email = "leonardo.baroncelli26@gmail.com"}
]


dependencies = [
    "requests==2.32.3",
    "transformers==4.46.*",
    "faiss-gpu-cu12>=1.7",
    "accelerate",
    "python-docx==1.1.2",
    "pypdf>=4.3",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-openai>=0.2",
    "langsmith",
    "langgraph",
    "sentence_transformers",
    "tqdm"
]

[project.optional-dependencies]
evaluation = [
    "ragas==0.2.6",
    "matplotlib"
]
dev = [
    "grandalf"
]
test = [
    "pytest==8.*",
    "IPython",
]
ui = [
    "streamlit"
]
engines = [
    "vllm",
    "ollama"
]

[project.urls]
"Repository" = "https://gitlab.hpc.cineca.it/aproia00/vectoria"
"Issues" = "https://gitlab.hpc.cineca.it/aproia00/issues"

[tool.pytest.ini_options]
addopts = "-v --pdbcls=IPython.terminal.debugger:TerminalPdb"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
] 
