[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectoria_lib"
version = "1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8"
]
authors = [
    {name = "Andrea Proia", email = "a.proia@cineca.it"},
    {name = "Chiara Malizia", email = "c.malizia@cineca.it"},
    {name = "Eric Pascolo", email = "e.pascolo@cineca.it"},
    {name = "Leonardo Baroncelli", email = "leonardo.baroncelli26@gmail.com"},
    {name = "Luca Babetto", email = "l.babetto@cineca.it"}
]
maintainers = [
    {name = "Andrea Proia", email = "a.proia@cineca.it"},
    {name = "Chiara Malizia", email = "c.malizia@cineca.it"},
    {name = "Eric Pascolo", email = "e.pascolo@cineca.it"},
    {name = "Leonardo Baroncelli", email = "leonardo.baroncelli26@gmail.com"},
    {name = "Luca Babetto", email = "l.babetto@cineca.it"}
]
dependencies = [
    "torch<=2.4.0",
    "numpy<=2.2.3",
    "requests==2.32.3",
    "transformers==4.46.*",
    "faiss-gpu-cu12==1.9.0.post1",
    "accelerate",
    "python-docx==1.1.2",
    "pypdf>=4.3",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-openai>=0.2",
    "langgraph",
    "sentence_transformers>=3.0.0",
    "tqdm",
    "bitsandbytes",
]

[project.optional-dependencies]
evaluation = [
    "ragas==0.2.11",
    "matplotlib"
]
dev = [
    "grandalf"
]
test = [
    "pytest==8.*",
    "IPython",
]
ui = [
    "streamlit==1.41.*"
]
engines = [
    "vllm"
]

[project.urls]
"Repository" = "https://github.com/Eurocc-Italy/Vectoria"
"Issues" = "https://github.com/Eurocc-Italy/Vectoria/issues"

[tool.pytest.ini_options]
addopts = "-v --pdbcls=IPython.terminal.debugger:TerminalPdb"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
pythonpath = "vectoria_lib"