[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectoria_lib"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8"
]
authors = [
    {name = "Andrea Proia", email = "a.proia@cineca.it"},
    {name = "Chiara Malizia", email = "c.malizia@cineca.it"},
    {name = "Eric Pascolo", email = "e.pascolo@cineca.it"},
    {name = "Leonardo Baroncelli", email = "leonardo.baroncelli26@gmail.com"}
]
maintainers = [
    {name = "Andrea Proia", email = "a.proia@cineca.it"},
    {name = "Chiara Malizia", email = "c.malizia@cineca.it"},
    {name = "Eric Pascolo", email = "e.pascolo@cineca.it"},
    {name = "Leonardo Baroncelli", email = "leonardo.baroncelli26@gmail.com"}
]
dependencies = [
    "torch",
    "datasets",
    "transformers",
    "faiss-gpu",
    "accelerate",
    "bitsandbytes",
    "pandas",
    "langchain",
    "langchain_community",
    "langchain-huggingface",
    "langchain-ollama",
    "langsmith",
    "langgraph",
    "pypdf",
    "python-docx",
    "tqdm"
]
[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel"
]
test = [
    "pytest==8.2.0",
    "IPython==8.12.3"
]
experiments = [
    "pdfminer.six",
    "langchain_openai",
    "ragas",
    "streamlit",
    "plotly",
    "GPUtil"
]

[project.urls]
"Repository" = "https://gitlab.hpc.cineca.it/aproia00/llm_eucc"
"Issues" = "https://gitlab.hpc.cineca.it/aproia00/issues"

[tool.pytest.ini_options]
addopts = "-v --pdbcls=IPython.terminal.debugger:TerminalPdb"
